--- a/2_codebook.Rmd
+++ b/2_codebook.Rmd
@@ -11,12 +11,36 @@ output:
 
 ```{r helper}
 source("0_helpers.R")
-birthorder = readRDS("data/birthorder.rds")
+alldata_birthorder = readRDS("data/alldata_birthorder.rds")
 knitr::opts_chunk$set(error = TRUE)
+```
+
+
+## Data
+```{r}
+### Import alldata used for birthorder and g-factors computed
+alldata_birthorder = readRDS("data/alldata_birthorder.rds")
+
+colnames(alldata_birthorder)
+crosstabs(alldata_birthorder$any_multiple_birth)
+## For the imputation we want to clean the dataset and get rid of all uninteresting data
+alldata_birthorder = alldata_birthorder %>%
+  filter(!is.na(pidlink)) %>% # no individuals who are only known from the pregnancy file
+  filter(is.na(lifebirths) | lifebirths == 2) %>% # remove 7 and 2 individuals who are known as stillbirth or miscarriage but still have PID
+  select(-lifebirths) %>% 
+  filter(!is.na(mother_pidlink)) %>% 
+  select(-father_pidlink) %>% 
+  filter(is.na(any_multiple_birth) | any_multiple_birth != 1) %>% # remove 7 and 2 individuals who are known as stillbirth or miscarriage but still have PID
+  select(-starts_with("age_"), -wave, -any_multiple_birth, -multiple_birth) %>% 
+  mutate(money_spent_smoking_log = if_else(is.na(money_spent_smoking_log) & ever_smoked == 0, 0, money_spent_smoking_log),
+         amount = if_else(is.na(amount) & ever_smoked == 0, 0, amount),
+         amount_still_smokers = if_else(is.na(amount_still_smokers) &  still_smoking == 0, 0, amount_still_smokers),
+         birthyear = lubridate::year(birthdate)) %>% 
+  select(-birthdate, -hhid14_9, -hhid14_9.x, -hhid14_9.y)
 ```
 
 ```{r}
 library(codebook)
-codebook(birthorder)
+codebook(alldata_birthorder)
 ```
 
