--- a/4_analyses_imputed_data.Rmd
+++ b/4_analyses_imputed_data.Rmd
@@ -10,42 +10,45 @@ editor_options:
 source("0_helpers.R")
 ```
 
+
+## Functions
+
+```{r}
+
+n_imputations.mitml = function(imps) {
+  imps$iter$m
+}
+n_imputations.mids = function(imps) {
+  imps$m
+}
+n_imputations.amelia = function(imps) {
+  length(imps$imputations)
+}
+n_imputations = function(imps) { UseMethod("n_imputations") }
+
+complete.mitml = mitml::mitmlComplete
+complete.mids = mice::complete
+complete = function(...) { UseMethod("complete") }
+
+library(mice)
+library(miceadds)
+library(mitml)
+```
+
+
 ## Load data
 ```{r Load Data}
-birthorder = readRDS("data/imputed_alldata_bo.rds")
+birthorder = readRDS("data/alldata_birthorder_i.rds")
 ```
 
 ## Data preparations
 ```{r data preparations}
-### Variables
-birthorder = birthorder %>%
-  mutate(
-    # center variables that are used for analysis
-  raven_2015_old_nonz = raven_2015_old,
-  g_factor = scale(g_factor),
-  raven_2015_old = scale(raven_2015_old),
-  math_2015_old = scale(math_2015_old),
-  count_backwards = scale(count_backwards),
-  raven_2015_young = scale(raven_2015_young),
-  math_2015_young = scale(math_2015_young),
-  words_remembered_avg = scale(words_remembered_avg),
-  words_immediate = scale(words_immediate),
-  words_delayed = scale(words_delayed),
-  adaptive_numbering = scale(adaptive_numbering),
-  riskA = scale(riskA),
-  riskB = scale(riskB),
-  years_of_education_z = scale(years_of_education),
-  Total_score_highest_z = scale(Total_score_highest),
-  wage_last_month_z = scale(wage_last_month_log),
-  wage_last_year_z = scale(wage_last_year_log),
-  big5_ext = scale(big5_ext),
-  big5_con = scale(big5_con),
-  big5_agree = scale(big5_agree),
-  big5_open = scale(big5_open),
-  big5_neu = scale(big5_neu)
-)
-qplot(birthorder$male)
-qplot(birthorder$g_factor)
+birthorder <- mids2mitml.list(birthorder)
+birthorder <- within(birthorder, {
+  g_factor_2015 <- rowMeans(scale(cbind(raven_2015_old, math_2015_old, count_backwards,  words_delayed, adaptive_numbering)))
+})
+
+birthorder = birthorder %>% tbl_df.mitml.list
 
 ### Birthorder and Sibling Count
 birthorder = birthorder %>% 
@@ -61,27 +64,6 @@ birthorder = birthorder %>%
                                                sibling_count_naive_factor),
     sibling_count_naive_factor = factor(sibling_count_naive_factor, 
                                                levels = c("2","3","4","5","5+")),
-
-    birthorder_uterus_alive_factor = as.character(birthorder_uterus_alive),
-    birthorder_uterus_alive_factor = ifelse(birthorder_uterus_alive > 5, "5+",
-                                            birthorder_uterus_alive_factor),
-    birthorder_uterus_alive_factor = factor(birthorder_uterus_alive_factor, 
-                                            levels = c("1","2","3","4","5","5+")),
-    sibling_count_uterus_alive_factor = as.character(sibling_count_uterus_alive),
-    sibling_count_uterus_alive_factor = ifelse(sibling_count_uterus_alive > 5, "5+",
-                                               sibling_count_uterus_alive_factor),
-    sibling_count_uterus_alive_factor = factor(sibling_count_uterus_alive_factor, 
-                                               levels = c("2","3","4","5","5+")),
-    birthorder_uterus_preg_factor = as.character(birthorder_uterus_preg),
-    birthorder_uterus_preg_factor = ifelse(birthorder_uterus_preg > 5, "5+",
-                                           birthorder_uterus_preg_factor),
-    birthorder_uterus_preg_factor = factor(birthorder_uterus_preg_factor,
-                                           levels = c("1","2","3","4","5","5+")),
-    sibling_count_uterus_preg_factor = as.character(sibling_count_uterus_preg),
-    sibling_count_uterus_preg_factor = ifelse(sibling_count_uterus_preg > 5, "5+",
-                                              sibling_count_uterus_preg_factor),
-    sibling_count_uterus_preg_factor = factor(sibling_count_uterus_preg_factor, 
-                                              levels = c("2","3","4","5","5+")),
     birthorder_genes_factor = as.character(birthorder_genes),
     birthorder_genes_factor = ifelse(birthorder_genes >5 , "5+", birthorder_genes_factor),
     birthorder_genes_factor = factor(birthorder_genes_factor, 
@@ -100,22 +82,6 @@ birthorder = birthorder %>%
                                                         "1/5", "2/5", "3/5", "4/5", "5/5",
                                                         "1/5+", "2/5+", "3/5+", "4/5+",
                                                         "5/5+", "5+/5+")),
-    count_birthorder_uterus_alive =
-      factor(str_replace(as.character(interaction(birthorder_uterus_alive_factor,                                                              sibling_count_uterus_alive_factor)),
-                        "\\.", "/"),
-                                           levels =   c("1/2","2/2", "1/3",  "2/3",
-                                                        "3/3", "1/4", "2/4", "3/4", "4/4",
-                                                        "1/5", "2/5", "3/5", "4/5", "5/5",
-                                                        "1/5+", "2/5+", "3/5+", "4/5+",
-                                                        "5/5+", "5+/5+")),
-    count_birthorder_uterus_preg =
-      factor(str_replace(as.character(interaction(birthorder_uterus_preg_factor,                                                              sibling_count_uterus_preg_factor)), 
-                         "\\.", "/"),
-                                           levels =   c("1/2","2/2", "1/3",  "2/3",
-                                                        "3/3", "1/4", "2/4", "3/4", "4/4",
-                                                        "1/5", "2/5", "3/5", "4/5", "5/5",
-                                                        "1/5+", "2/5+", "3/5+", "4/5+",
-                                                        "5/5+", "5+/5+")),
     count_birthorder_genes =
       factor(str_replace(as.character(interaction(birthorder_genes_factor,                                                              sibling_count_genes_factor)), "\\.", "/"),
                                            levels =   c("1/2","2/2", "1/3",  "2/3",
@@ -124,18 +90,90 @@ birthorder = birthorder %>%
                                                         "1/5+", "2/5+", "3/5+", "4/5+",
                                                         "5/5+", "5+/5+")))
 
-birthorder <- birthorder %>%
-                     mutate(sibling_count = sibling_count_naive_factor,
-                            birth_order_nonlinear = birthorder_naive_factor,
-                            birth_order = birthorder_naive,
-                            count_birth_order = count_birthorder_naive)
+
+# ### Variables
+birthorder = birthorder %>%
+  mutate(
+    # center variables that are used for analysis
+  raven_2015_old = scale(raven_2015_old),
+  math_2015_old = scale(math_2015_old),
+  count_backwards = scale(count_backwards),
+  raven_2015_young = scale(raven_2015_young),
+  math_2015_young = scale(math_2015_young),
+  words_delayed = scale(words_delayed),
+  adaptive_numbering = scale(adaptive_numbering),
+  riskA = scale(riskA),
+  riskB = scale(riskB),
+  years_of_education_z = scale(years_of_education),
+  wage_last_month_z = scale(wage_last_month_log),
+  wage_last_year_z = scale(wage_last_year_log),
+  big5_ext = scale(big5_ext),
+  big5_con = scale(big5_con),
+  big5_agree = scale(big5_agree),
+  big5_open = scale(big5_open),
+  big5_neu = scale(big5_neu)
+)
+
+
 ```
 
 ## Intelligence {.active .tabset}
 ### g-factor {.tabset}
 
 ```{r}
-birthorder <- birthorder %>% mutate(outcome = g_factor)
+# Specify your outcome
+birthorder = birthorder %>% mutate(outcome = g_factor_2015)
+
+## start with naive birthorder
+birthorder <- birthorder %>%
+                     mutate(sibling_count = sibling_count_genes,
+                            birth_order_nonlinear = birthorder_genes_factor,
+                            birth_order = birthorder_genes,
+                            count_birth_order = count_birthorder_genes)
+# naive covariates
+riskA_m1 <- with(birthorder, lmer(outcome ~ age + male + sibling_count + (1 | mother_pidlink)))
+mitml::testEstimates(riskA_m1, var.comp = T)
+riskA_m1_plot = lmer(outcome ~ age + male + sibling_count + (1 | mother_pidlink),
+                   data = birthorder[[1]])
+plot(allEffects(riskA_m1_plot)) # fuer plots
+
+# naive linear
+riskA_m1 <- with(birthorder, lmer(outcome ~ birth_order + age + male + sibling_count + (1 | mother_pidlink)))
+mitml::testEstimates(riskA_m1, var.comp = T)
+riskA_m1_plot = lmer(outcome ~ birth_order + age + male + sibling_count + (1 | mother_pidlink),
+                   data = birthorder[[1]])
+plot_birthorder(riskA_m1_plot, separate = FALSE)
+
+# naive factor
+riskA_m1 <- with(birthorder, lmer(outcome ~ birth_order_nonlinear + age + male + sibling_count +
+                                    (1 | mother_pidlink)))
+mitml::testEstimates(riskA_m1, var.comp = T)
+riskA_m1_plot = lmer(outcome ~ birth_order_nonlinear + age + male + sibling_count +
+                       (1 | mother_pidlink),
+                   data = birthorder[[1]])
+plot_birthorder(riskA_m1_plot, separate = FALSE)
+
+# naive interaction
+riskA_m1 <- with(birthorder, lmer(outcome ~ count_birth_order + age + male  +
+                                    (1 | mother_pidlink)))
+mitml::testEstimates(riskA_m1, var.comp = T)
+riskA_m1_plot = lmer(outcome ~ count_birth_order + age + male +
+                       (1 | mother_pidlink),
+                   data = birthorder[[1]])
+plot_birthorder(riskA_m1_plot)
+
+birthorder <- birthorder %>%
+                     mutate(sibling_count = sibling_count_naive_factor,
+                            birth_order_nonlinear = birthorder_naive_factor,
+                            birth_order = birthorder_naive,
+                            count_birth_order = count_birthorder_naive)
+birthorder <- birthorder %>%
+                     mutate(sibling_count = sibling_count_naive_factor,
+                            birth_order_nonlinear = birthorder_naive_factor,
+                            birth_order = birthorder_naive,
+                            count_birth_order = count_birthorder_naive)
+
+
 model = lmer(outcome ~ birth_order + age + male + sibling_count + (1 | mother_pidlink),
                    data = birthorder)
 compare_birthorder_specs(model)
